[gd_scene load_steps=2 format=3 uid="uid://bt8umr5bwbj3j"]

[ext_resource type="Script" path="res://ui/GameUI/Tooltip/ItemTooltipComponent.gd" id="1_xy6qk"]

[node name="ItemTooltipComponent" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_xy6qk")

[connection signal="mouse_in" from="." to="." method="_on_mouse_in"]
[connection signal="mouse_out" from="." to="." method="_on_mouse_out"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
